--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -22,6 +22,11 @@
                 Need An Account? <a class="ml-2" href="{% url 'register' %}">Sign Up Now</a>
             </small>
         </div>
+        <div class="border-top pt-3">
+            <small class="text-muted">
+                Need An Account? <a class="ml-2" href="{% url 'register' %}">Sign Up Now</a>
+            </small>
+        </div>
     </div>
 {% endif %}
 {% endblock content %}
