--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -19,18 +19,22 @@
             </div>
         </form>
         <div class="border-top pt-3 social">
-            <a href="{% provider_login_url 'github' %}" class="btn btn-secondary">
+            <div>
+            <a href="{% provider_login_url 'github' %}" class="btn btn-outline-secondary">
                 <i class="fa fa-github fa-fw"></i>
                 <span>Login with GitHub</span>
-            </a>
-            <a href="{% provider_login_url 'google' %}" class="btn btn-secondary">
+            </a></div>
+            <div>
+            <a href="{% provider_login_url 'google' %}" class="btn btn-outline-danger">
                 <i class="fa fa-google fa-fw"></i>
                 <span>Login with Google</span>
-            </a>
-            <a href="{% provider_login_url 'facebook' %}" class="btn btn-secondary">
+            </a></div>
+            <div>
+            <a href="{% provider_login_url 'facebook' %}" class="btn btn-outline-primary">
                 <i class="fa fa-facebook fa-fw"></i>
                 <span>Login with Facebook</span>
             </a>
+            </div>
         </div>
         <div class="border-top pt-3">
             <small class="text-muted">
