--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -29,11 +29,11 @@
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
               <a class="nav-item nav-link" href="{% url 'blog-home' %}">Home</a>
-              <a class="nav-item nav-link" href="{% url 'blog-about' %}">About</a>
+              <a class="nav-item nav-link" href="{% url 'blog-about' %}">About</a>&ebsp;
                 <form class="d-flex" method="POST" action="{% url 'search-post' %}">
                     {% csrf_token %}
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="searched">&nbsp;
+                    <button class="btn btn-outline-dark" type="submit">Search</button>
                 </form>
             </div>
             <!-- Navbar Right Side -->
