--- a/blog/templates/blog/searchPost.html
+++ b/blog/templates/blog/searchPost.html
@@ -3,6 +3,10 @@
     <center>
         {% if searched %}
             <h1>You searched for {{searched}}</h1>
+            <br/>
+            {% for blog in blogs %}
+                {{blog}}<br/>
+            {% endfor %}
         {% else %}
             <h1>Hey! you forgot to search for a Blog</h1>
         {% endif %}
