--- a/blog/templates/blog/searchPost.html
+++ b/blog/templates/blog/searchPost.html
@@ -2,13 +2,13 @@
 {% block content %}
     <center>
         {% if searched %}
-            <h1>You searched for {{searched}}</h1>
+            <h4>You searched for {{searched}}</h4>
             <br/>
             {% for blog in blogs %}
-                {{blog}}<br/>
+            <a href="{% url 'post-detail' post.id %}">{{blog}}</a><br/>
             {% endfor %}
         {% else %}
-            <h1>Hey! you forgot to search for a Blog</h1>
+            <h4>Hey! you forgot to search for a Blog</h4>
         {% endif %}
     </center>
 {% endblock content %}
