--- a/blog/templates/blog/searchPost.html
+++ b/blog/templates/blog/searchPost.html
@@ -5,7 +5,8 @@
             <h4>You searched for {{searched}}</h4>
             <br/>
             {% for blog in blogs %}
-                <a href="{% url 'post-detail' post.id %}">{{blog}}</a><br/>
+                <a href="{% url 'post-detail' blog.id %}">{{blog}}</a>
+                <br/>
             {% endfor %}
         {% else %}
             <h4>Hey! you forgot to search for a Blog</h4>
